# AutoHRAnalytics

./: .gitignore
BE/: README.md  main.py  pyproject.toml  test.py
